--- a/doc/muxers.texi
+++ b/doc/muxers.texi
@@ -1523,7 +1523,7 @@ Set the program @samp{service_type}. Default is @code{digital_tv}.
 Accepts the following options:
 @table @samp
 @item hex_value
-Any hexdecimal value between @code{0x01} to @code{0xff} as defined in
+Any hexadecimal value between @code{0x01} to @code{0xff} as defined in
 ETSI 300 468.
 @item digital_tv
 Digital TV service.
