--- a/Changelog
+++ b/Changelog
@@ -19,6 +19,7 @@ version <next>:
 - ARBC decoder
 - libaribb24 based ARIB STD-B24 caption support (profiles A and C)
 - Support decoding of HEVC 4:4:4 content in nvdec and cuviddec
+- removed libndi-newtek
 
 
 version 4.1:
